Review 1 - Horizontal scroll fix

--- a/styles/style.css
+++ b/styles/style.css
@@ -131,9 +131,9 @@
 
 .showcase-lots {
   padding-top: 27px;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 25px;
 }
 
 .lot {
